# Trabalho_Processamento_de_imagens_M1PT1

./: README.md
pdi_code/: CMakeLists.txt  README.md
pdi_code/app/: conversao_media_aritmetica.cpp  conversao_media_ponderada.cpp  histograma.cpp  inverso_imagem.cpp  isolamento_canais.cpp  limiarizacao.cpp  operacoes_aritmeticas_escalar.cpp  operacoes_aritmeticas_imagem.cpp  run.cpp
pdi_code/include/: Operation.hpp  utils.hpp
pdi_code/src/: Operation.cpp
